--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -24,3 +24,7 @@ executable sneerkell
   ghc-options:      -Wall
   hs-source-dirs:   src
   main-is:          Main.hs
+
+source-repository head
+  type:     git
+  location: http://github.com/bamboo/sneerkell
