--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language: haskell
-gch: 7.8
+ghc: 7.8
+install:
+- cabal sandbox init
+- cabal install --only-dependencies --enable-tests
+before_script:
+- cabal configure --enable-tests
+- cabal build
+script:
+- cabal test --show-details=always --test-options="--color"
