--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -46,6 +46,13 @@ test-suite spec
                   , sneerkell
                   , hspec >= 1.3
 
+test-suite hlint
+  default-language: Haskell2010
+  type:             exitcode-stdio-1.0
+  build-depends:    base, hlint == 1.8.*
+  hs-source-dirs:   test
+  main-is:          HLint.hs
+
 source-repository head
   type:     git
   location: http://github.com/bamboo/sneerkell
