--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -17,7 +17,9 @@ library
   hs-source-dirs:   src
   exposed-modules:  Sneer.Transit
   build-depends:    base >= 4
+                  , Sneer.Client
                   , haskoin
+                  , network
                   , bytestring
                   , text
                   , aeson
@@ -27,28 +29,32 @@ library
 executable sneerkell
   default-language: Haskell2010
   other-extensions: GADTs, TypeSynonymInstances, FlexibleInstances, OverloadedStrings
-  build-depends:    base >= 4
+  ghc-options:      -Wall -fno-warn-orphans -threaded
+  hs-source-dirs:   main
+  main-is:          Main.hs
                   , network
                   , haskoin
-                  , bytestring
-                  , aeson
                   , text
-                  , vector
-  ghc-options:      -Wall -Werror -fno-warn-orphans
-  hs-source-dirs:   src
-  main-is:          Main.hs
+                  , sneerkell
 
 test-suite spec
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -debug
   hs-source-dirs:   test
   main-is:          Spec.hs
   build-depends:    base >= 4
                   , sneerkell
+                  , network
+                  , process
+                  , directory
+                  , filepath
+                  , async
                   , hspec >= 1.3
 
 test-suite hlint
   default-language: Haskell2010
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   type:             exitcode-stdio-1.0
   build-depends:    base, hlint == 1.9.*
   hs-source-dirs:   test
