--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -1,6 +1,7 @@
 name:               sneerkell
 version:            0.1.0.0
 synopsis:           The Sneer in Haskell Experiment
+description:        Implementation of the Sneer platform in Haskell targeting the desktop.
 homepage:           http://github.com/bamboo/sneerkell
 license:            LGPL-3
 license-file:       LICENSE
@@ -13,11 +14,11 @@ cabal-version:      >=1.10
 
 library
   default-language: Haskell2010
-  ghc-options:      -Wall -Werror -fno-warn-orphans
+  ghc-options:      -Wall -fno-warn-orphans -rtsopts
   hs-source-dirs:   src
   exposed-modules:  Sneer.Transit
-  build-depends:    base >= 4
                   , Sneer.Client
+  build-depends:    base >= 4 && < 5
                   , haskoin
                   , network
                   , bytestring
@@ -32,6 +33,7 @@ executable sneerkell
   ghc-options:      -Wall -fno-warn-orphans -threaded
   hs-source-dirs:   main
   main-is:          Main.hs
+  build-depends:    base >= 4 && < 5
                   , network
                   , haskoin
                   , text
@@ -43,7 +45,7 @@ test-suite spec
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N -debug
   hs-source-dirs:   test
   main-is:          Spec.hs
-  build-depends:    base >= 4
+  build-depends:    base >= 4 && < 5
                   , sneerkell
                   , network
                   , process
@@ -56,7 +58,8 @@ test-suite hlint
   default-language: Haskell2010
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   type:             exitcode-stdio-1.0
-  build-depends:    base, hlint == 1.9.*
+  build-depends:    base >= 4 && < 5
+                  , hlint == 1.9.*
   hs-source-dirs:   test
   main-is:          HLint.hs
 
