--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
 - travis_retry sudo apt-get update
 - travis_retry sudo apt-get install --force-yes happy-1.19.3 alex-3.1.3
 - export PATH=/opt/alex/3.1.3/bin:/opt/happy/1.19.3/bin:$PATH
-- git clone git@github.com:sneerteam/sneer.git --depth 1 --branch master --single-branch sneer
+- git clone https://github.com/sneerteam/sneer.git --depth 1 --branch master --single-branch sneer
 install:
 - cabal sandbox init
 - cabal install --only-dependencies --enable-tests
