--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 install:
 - cabal sandbox init
 - cabal install --only-dependencies --enable-tests
+- cd sneer && ./gradlew :server:assemble
 before_script:
 - cd sneer && ./gradlew -q :server:run -Pserver-options="[5555, 8282]" &
 - cabal configure --enable-tests
