--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ before_install:
 install:
 - cabal sandbox init
 - cabal install --only-dependencies --enable-tests
-- cd sneer && ./gradlew :server:assemble
+- sneer/gradlew --build-file sneer/build.gradle :server:assemble
 before_script:
-- cd sneer && ./gradlew -q :server:run -Pserver-options="[5555, 8282]" &
+- sneer/gradlew --build-file sneer/build.gradle -q :server:run -Pserver-options="[5555, 8282]" &
 - cabal configure --enable-tests
 - cabal build
 script:
