--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -14,10 +14,11 @@ cabal-version:      >=1.10
 
 library
   default-language: Haskell2010
-  ghc-options:      -Wall -fno-warn-orphans -rtsopts
+  ghc-options:      -Wall -rtsopts
   hs-source-dirs:   src
-  exposed-modules:  Sneer.Transit
-                  , Sneer.Client
+  exposed-modules:  Sneer.Client
+                  , Sneer.Protocol
+                  , Data.Transit
   build-depends:    base >= 4 && < 5
                   , haskoin
                   , network
@@ -30,7 +31,7 @@ library
 executable sneerkell
   default-language: Haskell2010
   other-extensions: GADTs, TypeSynonymInstances, FlexibleInstances, OverloadedStrings
-  ghc-options:      -Wall -fno-warn-orphans -threaded
+  ghc-options:      -Wall -threaded
   hs-source-dirs:   main
   main-is:          Main.hs
   build-depends:    base >= 4 && < 5
