--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -17,6 +17,7 @@ library
   ghc-options:      -Wall -rtsopts
   hs-source-dirs:   src
   exposed-modules:  Sneer.Client
+                  , Sneer.Keys
                   , Sneer.Protocol
                   , Data.Transit
   build-depends:    base >= 4 && < 5
@@ -27,6 +28,8 @@ library
                   , aeson
                   , scientific
                   , vector
+                  , system-filepath
+                  , system-fileio
 
 executable sneerkell
   default-language: Haskell2010
@@ -37,7 +40,6 @@ executable sneerkell
   build-depends:    base >= 4 && < 5
                   , network
                   , haskoin
-                  , text
                   , sneerkell
 
 test-suite spec
