--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -18,18 +18,21 @@ library
   hs-source-dirs:   src
   exposed-modules:  Sneer.Client
                   , Sneer.Keys
+                  , Network.UdpMessenger
                   , Sneer.Protocol
                   , Data.Transit
-  build-depends:    base >= 4 && < 5
+  build-depends:    aeson
+                  , async
+                  , base >= 4 && < 5
+                  , bytestring
                   , haskoin
                   , network
-                  , bytestring
-                  , text
-                  , aeson
                   , scientific
-                  , vector
-                  , system-filepath
+                  , stm >= 2.4.2
                   , system-fileio
+                  , system-filepath
+                  , text
+                  , vector
 
 executable sneerkell
   default-language: Haskell2010
@@ -48,11 +51,12 @@ test-suite spec
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N -debug
   hs-source-dirs:   test
   main-is:          Spec.hs
-  build-depends:    base >= 4 && < 5
-                  , sneerkell
-                  , network
-                  , async
+  build-depends:    async
+                  , base >= 4 && < 5
                   , hspec >= 1.3
+                  , network
+                  , sneerkell
+                  , stm >= 2.4.2
 
 test-suite hlint
   default-language: Haskell2010
