--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -54,6 +54,7 @@ test-suite spec
   build-depends:    async
                   , base >= 4 && < 5
                   , hspec >= 1.3
+                  , QuickCheck
                   , network
                   , sneerkell
                   , stm >= 2.4.2
