--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -51,10 +51,12 @@ test-suite spec
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N -debug
   hs-source-dirs:   test
   main-is:          Spec.hs
-  build-depends:    async
+  build-depends:    aeson
+                  , async
                   , base >= 4 && < 5
                   , hspec >= 1.3
-                  , QuickCheck
+                  , smallcheck
+                  , hspec-smallcheck
                   , network
                   , sneerkell
                   , stm >= 2.4.2
