--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -25,6 +25,7 @@ library
                   , async
                   , base >= 4 && < 5
                   , bytestring
+                  , base64-bytestring
                   , haskoin
                   , network
                   , scientific
@@ -54,6 +55,7 @@ test-suite spec
   build-depends:    aeson
                   , async
                   , base >= 4 && < 5
+                  , bytestring
                   , hspec >= 1.3
                   , smallcheck
                   , hspec-smallcheck
