--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -39,7 +39,7 @@ library
                   , text
                   , transformers >= 0.3.0.0
                   , unordered-containers
-                  , vector
+                  , vector >= 0.10.12.1
 
 executable sneerkell
   default-language: Haskell2010
@@ -70,7 +70,7 @@ test-suite spec
                   , stm >= 2.4.2
                   , text
                   , unordered-containers
-                  , vector
+                  , vector >= 0.10.12.1
 
 test-suite hlint
   default-language: Haskell2010
