--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -27,6 +27,7 @@ library
   build-depends:    aeson
                   , async
                   , base >= 4 && < 5
+                  , base16-bytestring >= 0.1.1.6
                   , base64-bytestring
                   , bytestring
                   , haskoin
@@ -48,10 +49,15 @@ executable sneerkell
   hs-source-dirs:   main
   main-is:          Main.hs
   build-depends:    base >= 4 && < 5
+                  , base16-bytestring >= 0.1.1.6
+                  , bytestring
                   , haskoin
+                  , http-types >= 0.8.6
                   , network
                   , sneerkell
                   , stm >= 2.4.2
+                  , text
+                  , vector >= 0.10.12.1
 
 test-suite spec
   default-language: Haskell2010
