--- a/sneerkell.cabal
+++ b/sneerkell.cabal
@@ -31,6 +31,7 @@ library
                   , base64-bytestring
                   , bytestring
                   , haskoin
+                  , http-types >= 0.8.6
                   , mtl
                   , network
                   , scientific
