--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,11 @@ before_install:
 - travis_retry sudo apt-get install --force-yes happy-1.19.3 alex-3.1.3
 - export PATH=/opt/alex/3.1.3/bin:/opt/happy/1.19.3/bin:$PATH
 - git clone https://github.com/sneerteam/sneer.git --depth 1 --branch master --single-branch sneer
+- cabal update
+- cabal install cabal-install
 install:
 - cabal sandbox init
-- cabal install --only-dependencies --enable-tests
+- cabal install --only-dependencies --enable-tests -j4 --allow-newer
 - sneer/gradlew --build-file sneer/build.gradle -q :server:assemble
 before_script:
 - sneer/gradlew --build-file sneer/build.gradle -q :server:run -Pserver-options="[5555, 8282]" &
