--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 - export PATH=/opt/alex/3.1.3/bin:/opt/happy/1.19.3/bin:/opt/cabal/1.22/bin:$PATH
 - git clone https://github.com/sneerteam/sneer.git --depth 1 --branch master --single-branch sneer
 install:
+- cabal update
 - cabal sandbox init
 - cabal install --only-dependencies --enable-tests -j2 --allow-newer
 - sneer/gradlew --build-file sneer/build.gradle -q :server:assemble
