--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ before_install:
 - export PATH=/opt/alex/3.1.3/bin:/opt/happy/1.19.3/bin:/opt/cabal/1.22/bin:$PATH
 - git clone https://github.com/sneerteam/sneer.git --depth 1 --branch master --single-branch sneer
 install:
-- cabal --version
 - cabal update
+- cabal install cabal-install
+- cabal --version
 before_script:
 - sneer/gradlew --build-file sneer/build.gradle -q :server:run -Pserver-options="[5555, 8282]" &
 - sleep 5
